config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -84,5 +84,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://square-jupiter-9ff84.netlify.app"
 }
